Attempt at fixing font flicker

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,7 +14,7 @@ body {
   --focusBg: hsl(205, 51%, 16%);
   --mainTerminalTaskbarText: white;
   background-color: var(--bg);
-  font-family: "Roboto Mono", sans-serif;
+
   background-color: var(--bg);
   color: var(--secondaryText);
   font-size: 18px;
